--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 body {
-  background-color: lightpink;
-  color: white;
+  background-color: pink;
+  color: black;
+  background-size: 800% 800%;
 }
 
 .header {
@@ -23,6 +24,12 @@ body {
 
 .dashboard {
   text-align: center;
+  background-image: url('../public/BulletinBackground.jpg');
+  border: rgb(184, 132, 48) 2rem solid;
+  color: white;
+  border-radius: 2rem;
+  margin: 4rem;
+  padding: 0.5rem;
 }
 
 .dashboard-welcome {
@@ -33,6 +40,38 @@ body {
 .dashboard-description {
   margin-top: 0;
   font-size: 1.2rem;
+}
+
+.dashboard-grid {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 20px;
+  border-radius: 2rem;
+  margin: 1.5rem;
+  padding: 2rem;
+}
+
+.dashboard-grid > * { /* child elems of dashboard grid */
+  background-color: sienna;
+  border-radius: 1rem;
+  padding: 1rem;
+
+}
+
+@media (max-width: 600px) { /* makes elems fit on mobile */
+  .dashboard {
+    margin: 1rem;
+    padding: 0.5rem
+  }
+
+  .dashboard-grid {
+    flex-direction: column;
+    align-items: stretch;
+    gap: 1rem;
+    padding: 1rem;
+    margin: 0.5rem;
+  }
 }
 
 .footer {
