Updated Expenses component to mirror Income component, refactored code slightly to remove use of unncecessary helper function, added functionality to display user income and expenses as daily, weekly, monthly, or yearly

--- a/src/App.css
+++ b/src/App.css
@@ -111,6 +111,24 @@ body {
   cursor: pointer;
 }
 
+.expenses li {
+  display: flex;
+  justify-content: space-between;
+  padding: 0.5rem 0rem; /* padding vertical + horizontal */
+  border-bottom: 1px solid #eee;
+}
+.expenses li:last-child {
+  border-bottom: none; /* removes border from last item */
+}
+.expenses li button {
+  background-color: red;
+  color: white;
+  border: white 1px solid;
+  padding: 0.5rem 0.5rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
+}
+
 form {
   display: flex;
   flex-direction: column;
@@ -122,6 +140,14 @@ form {
 }
 
 #incomeUnits {
+  width: 5rem
+}
+
+#expenseFrequency{
+  width: 4rem;
+}
+
+#expenseUnits {
   width: 5rem
 }
 
